--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ขออภัย ขณะนี้ไม่สามารถทำการซื้อประกันออนไลน์ได้ชั่วคราว</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://insurance.add-digital.co.th/medias/add-cloudcms/theme/ais-add/assets/css/setting.css" type="text/css">
 </head>
 <body>
 
