--- a/index.html
+++ b/index.html
@@ -4,13 +4,68 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ขออภัย ขณะนี้ไม่สามารถทำการซื้อประกันออนไลน์ได้ชั่วคราว</title>
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://insurance.add-digital.co.th/medias/add-cloudcms/theme/ais-add/assets/css/setting.css" type="text/css">
 </head>
 <body>
 
+	<style type="text/css">
+		.page_maintenance{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			justify-content: center;
+			min-height: 100vh;
+			color: #000000;
+		}
+		.img-maintenance {
+			width: 385px;
+			max-width: 100%;
+		}
+		.page_maintenance h2{
+			font-size: 28px;
+			margin-top: 43px;
+			margin-bottom: 24px;
+		}
+		.page_maintenance p{
+			font-size: 24px;
+			font-weight: 500;
+			margin-bottom: 38px;
+		}
+		.page_maintenance p.apologize{
+			font-size: 20px;
+			font-weight: 400;
+			color: #676767;
+		}
+		.page_maintenance span{
+			color: #4328BD;
+		}
+		.d-none {
+			display: none !important;
+		}
+		@media (min-width: 992px) {
+			.d-lg-none {
+				display: none !important;
+			}
+			.d-lg-block {
+				display: block !important;
+			}
+		}
+		@media (max-width: 768px) {
+			.img-maintenance {
+				width: 256px;
+			}
+			.page_maintenance h2{
+				font-size: 24px;
+			}
+			.page_maintenance p{
+				font-size: 20px;
+			}
+		}
+	</style>
+
 	<section class="page_maintenance">
-		<img src="images/illus_website_maintenance.png" class="img-maintenance">
+		<img src="illus_website_maintenance.png" class="img-maintenance">
 		<div>
 			<h2>ขออภัย ขณะนี้ไม่สามารถทำการ<br class="d-block d-lg-none">ซื้อประกันออนไลน์ได้ชั่วคราว</h2>
 			<p>เนื่องจากกำลังปรับปรุงระบบ <br class="d-block d-lg-none">
